--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 		}
 	],
 	"require": {
-		"php": ">=5.6.0"
+		"php": ">=5.6.0",
+		"chillerlan/php-base32": "dev-master"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "5.1.*"
