--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 	],
 	"require": {
 		"php": ">=5.6.0",
-		"chillerlan/php-base32": "dev-master"
+		"chillerlan/php-base32": "*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "5.1.*"
