--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,13 @@
 	],
 	"require": {
 		"php": ">=5.6.0",
-		"chillerlan/php-base32": "*"
+		"chillerlan/php-base32": "1.1.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "5.1.*"
 	},
 	"suggest": {
-		"chillerlan/php-qrcode": "dev-master",
+		"chillerlan/php-qrcode": "*",
 		"paragonie/random_compat": "Strong crypt fallback for PHP < 7 (~1.1)"
 	},
 	"autoload": {
