--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "chillerlan/php-googleauth",
-	"description": "Time based authentication codes. PHP 5.6+, PHP 7",
+	"description": "Time based authentication codes. PHP 7+",
 	"homepage": "https://github.com/codemasher/php-googleauth",
 	"license": "MIT",
 	"type": "library",
@@ -9,28 +9,28 @@
 	],
 	"authors": [
 		{
-			"name": "Michael Kliewe",
-			"homepage": "http://www.phpgangsta.de"
-		},
-		{
 			"name": "Smiley",
 			"email": "smiley@chillerlan.net"
 		}
 	],
 	"require": {
-		"php": ">=5.6.0",
-		"chillerlan/php-base32": "1.1.*"
+		"php": ">=7.0.3"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "5.1.*"
+		"phpunit/phpunit": "6.4.*"
 	},
 	"suggest": {
-		"chillerlan/php-qrcode": "*",
-		"paragonie/random_compat": "Strong crypt fallback for PHP < 7 (~1.1)"
+		"chillerlan/php-qrcode": "*"
 	},
 	"autoload": {
 		"psr-4": {
 			"chillerlan\\GoogleAuth\\": "src/"
 		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"chillerlan\\GoogleAuthTest\\": "tests/"
+		}
 	}
+
 }
