--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
 language: php
 
-php:
-  - 7.0
-  - 7.1
-  - 7.2
-
-before_install: pip install --user codecov
+matrix:
+  include:
+    - php: 7.2
+    - php: 7.3
+    - php: nightly
+  allow_failures:
+    - php: nightly
 
 install: travis_retry composer install --no-interaction --prefer-source
 
 script: vendor/bin/phpunit tests --coverage-clover clover.xml --whitelist src
 
-after_success: codecov
+after_success: bash <(curl -s https://codecov.io/bash)
