--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ matrix:
   include:
     - php: 7.2
     - php: 7.3
+    - php: 7.4snapshot
     - php: nightly
   allow_failures:
+    - php: 7.4snapshot
     - php: nightly
 
 install: travis_retry composer install --no-interaction --prefer-source
