--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
 		"chillerlan/php-settings-container": "^1.1"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "^8.0"
+		"chillerlan/php-qrcode": "^3.0",
+		"phpunit/phpunit": "^8.1"
 	},
 	"suggest": {
 		"chillerlan/php-qrcode": "^3.0"
