--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,26 @@
 language: php
 
+env:
+  global:
+    - PHAN_ALLOW_XDEBUG=0 PHAN_DISABLE_XDEBUG_WARN=1
+
 matrix:
   include:
-    - php: 7.2
-    - php: 7.3
-    - php: 7.4snapshot
+    - php: 7.4
     - php: nightly
   allow_failures:
-    - php: 7.4snapshot
     - php: nightly
 
-install: travis_retry composer install --no-interaction --prefer-source
+before_install:
+  - pecl channel-update pecl.php.net
+  - pecl install ast
 
-script: vendor/bin/phpunit tests --coverage-clover clover.xml --whitelist src
+install:
+  - composer install --no-interaction --prefer-source
+  - composer validate
+
+script:
+  --configuration phpunit.xml --coverage-clover clover.xml
+  - vendor/bin/phan
 
 after_success: bash <(curl -s https://codecov.io/bash)
