--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - composer validate
 
 script:
-  --configuration phpunit.xml --coverage-clover clover.xml
+  - vendor/bin/phpunit --configuration phpunit.xml
   - vendor/bin/phan
 
 after_success: bash <(curl -s https://codecov.io/bash)
