--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "chillerlan/php-authenticator",
-	"description": "A generator for counter- and time based 2-factor authentication codes (Google Authenticator). PHP 5.6+",
+	"description": "A generator for counter- and time based 2-factor authentication codes (Google Authenticator). PHP 7.0+",
 	"homepage": "https://github.com/chillerlan/php-authenticator",
 	"license": "MIT",
 	"type": "library",
@@ -21,13 +21,12 @@
 	"minimum-stability": "stable",
 	"prefer-stable": true,
 	"require": {
-		"php": "^5.6 || ^7.0",
-		"paragonie/constant_time_encoding": "^1.1 || ^v2.6",
-		"paragonie/random_compat": "^2.0"
+		"php": "^7.0",
+		"paragonie/constant_time_encoding": "^2.6"
 	},
 	"require-dev": {
 		"phpmd/phpmd": "^2.13",
-		"phpunit/phpunit": "^5.7 || ^6.5",
+		"phpunit/phpunit": "^6.5 || ^7.5",
 		"squizlabs/php_codesniffer": "^3.7"
 	},
 	"suggest": {
