--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,49 @@ name: "Continuous Integration"
 
 jobs:
 
+  static-code-analysis:
+    name: "Static Code Analysis"
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: true
+      matrix:
+        php-version:
+          - "7.2"
+          - "7.3"
+          - "7.4"
+          - "8.0"
+          - "8.1"
+          - "8.2"
+          - "8.3"
+
+    env:
+      PHAN_ALLOW_XDEBUG: 0
+      PHAN_DISABLE_XDEBUG_WARN: 1
+
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@v3
+
+      - name: "Install PHP"
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-version }}
+          tools: pecl
+          coverage: none
+          extensions: ast, curl, gmp, json, sodium
+
+      - name: "Install dependencies with composer"
+        uses: ramsey/composer-install@v2
+
+      - name: "Run phan"
+        run: php vendor/bin/phan
+
+
   tests:
     name: "Unit Tests"
+    needs: static-code-analysis
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -24,11 +65,13 @@ jobs:
           - ubuntu-latest
           - windows-latest
         php-version:
-          - "7.0"
-          - "7.1"
           - "7.2"
           - "7.3"
           - "7.4"
+          - "8.0"
+          - "8.1"
+          - "8.2"
+          - "8.3"
 
     steps:
       - name: "Checkout"
@@ -39,7 +82,7 @@ jobs:
         with:
           php-version: ${{ matrix.php-version }}
           coverage: xdebug
-          extensions: ast
+          extensions: curl, gmp, json, sodium
 
       - name: "Install dependencies with composer"
         uses: ramsey/composer-install@v2
