--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "chillerlan/php-authenticator",
-	"description": "A generator for counter- and time based 2-factor authentication codes (Google Authenticator). PHP 7.0+",
+	"description": "A generator for counter- and time based 2-factor authentication codes (Google Authenticator). PHP 7.2+",
 	"homepage": "https://github.com/chillerlan/php-authenticator",
 	"license": "MIT",
 	"type": "library",
@@ -21,12 +21,18 @@
 	"minimum-stability": "stable",
 	"prefer-stable": true,
 	"require": {
-		"php": "^7.0",
+		"php": "^7.2 || ^8.0",
+		"chillerlan/php-settings-container": "^1.2.2 || ^2.1.4 || ^3.0",
 		"paragonie/constant_time_encoding": "^2.6"
 	},
 	"require-dev": {
+		"ext-curl": "*",
+		"ext-gmp": "*",
+		"ext-json": "*",
+		"ext-sodium": "*",
+		"phan/phan": "^5.4",
 		"phpmd/phpmd": "^2.13",
-		"phpunit/phpunit": "^6.5 || ^7.5",
+		"phpunit/phpunit": "^8.5 || ^9.6",
 		"squizlabs/php_codesniffer": "^3.7"
 	},
 	"suggest": {
@@ -43,7 +49,8 @@
 		}
 	},
 	"scripts": {
-		"phpunit": "@php vendor/bin/phpunit"
+		"phpunit": "@php vendor/bin/phpunit",
+		"phan": "@php vendor/bin/phan --allow-polyfill-parser"
 	},
 	"config": {
 		"lock": false,
