:sparkles: switch phan for phpstan (see https://github.com/chillerlan/php-qrcode/issues/277)
(cherry picked from commit ee009167f240b266d2b0aaa4f92b28f027e311d4)

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,12 +8,12 @@
 >
 	<testsuites>
 		<testsuite name="php-authenticator test suite">
-			<directory suffix=".php">./tests</directory>
+			<directory>tests</directory>
 		</testsuite>
 	</testsuites>
 	<coverage processUncoveredFiles="true">
 		<include>
-			<directory suffix=".php">./src</directory>
+			<directory suffix=".php">src</directory>
 		</include>
 		<report>
 			<clover outputFile=".build/coverage/clover.xml"/>
