--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,28 +2,24 @@
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.2/phpunit.xsd"
          bootstrap="vendor/autoload.php"
-         cacheResultFile=".build/phpunit.result.cache"
+         cacheDirectory=".build/phpunit-cache"
          colors="true"
          beStrictAboutOutputDuringTests="true"
 >
 	<testsuites>
 		<testsuite name="php-authenticator test suite">
-			<directory suffix=".php">./tests/</directory>
-			<exclude>tests/Authenticators/AuthenticatorInterfaceTestAbstract.php</exclude>
+			<directory>tests</directory>
 		</testsuite>
 	</testsuites>
+	<source>
+		<include>
+			<directory>src</directory>
+		</include>
+	</source>
 	<coverage>
 		<report>
 			<clover outputFile=".build/coverage/clover.xml"/>
 			<xml outputDirectory=".build/coverage/coverage-xml"/>
 		</report>
 	</coverage>
-	<logging>
-		<junit outputFile=".build/logs/junit.xml"/>
-	</logging>
-	<source>
-		<include>
-			<directory>./src</directory>
-		</include>
-	</source>
 </phpunit>
