--- a/composer.json
+++ b/composer.json
@@ -40,10 +40,11 @@
 		"ext-json": "*",
 		"ext-sodium": "*",
 		"phpmd/phpmd": "^2.15",
-		"phpstan/phpstan": "^1.11",
-		"phpstan/phpstan-deprecation-rules": "^1.2",
+		"phpstan/phpstan": "^2.1.27",
+		"phpstan/phpstan-deprecation-rules": "^2.0.3",
 		"phpunit/phpunit": "^9.6",
-		"squizlabs/php_codesniffer": "^3.10"
+		"slevomat/coding-standard": "^8.23",
+		"squizlabs/php_codesniffer": "^4.0"
 	},
 	"suggest": {
 		"chillerlan/php-qrcode": "Create QR Codes for use with an authenticator app."
@@ -61,11 +62,15 @@
 	"scripts": {
 		"phpcs": "@php vendor/bin/phpcs",
 		"phpunit": "@php vendor/bin/phpunit",
-		"phpstan": "@php vendor/bin/phpstan"
+		"phpstan": "@php vendor/bin/phpstan",
+		"phpstan-baseline": "@php vendor/bin/phpstan --generate-baseline"
 	},
 	"config": {
 		"lock": false,
 		"sort-packages": true,
-		"platform-check": true
+		"platform-check": true,
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
 	}
 }
