--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,9 @@ jobs:
       - name: "Install dependencies with composer"
         uses: ramsey/composer-install@v3
 
+      - name: "Run PHP_CodeSniffer"
+        run: php vendor/bin/phpcs -v
+
       - name: "Run PHPStan"
         run: php vendor/bin/phpstan
 
