--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,8 +55,8 @@ jobs:
       - name: "Run PHP_CodeSniffer"
         run: php vendor/bin/phpcs -v
 
-      - name: "Run PHPStan"
-        run: php vendor/bin/phpstan
+#      - name: "Run PHPStan"
+#        run: php vendor/bin/phpstan
 
 
   tests:
