:octocat: phpstan is for masochists

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
           - "8.2"
           - "8.3"
           - "8.4"
-          - "8.5"
+#          - "8.5"
 
     env:
       PHAN_ALLOW_XDEBUG: 0
@@ -43,7 +43,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
-          extensions: ${{ env.PHP_EXTENSIONS }}
+          extensions: ast, ${{ env.PHP_EXTENSIONS }}
           ini-values: ${{ env.PHP_INI_VALUES }}
           coverage: none
 
@@ -55,6 +55,9 @@ jobs:
 
       - name: "Run PHP_CodeSniffer"
         run: php vendor/bin/phpcs -v
+
+      - name: "Run phan"
+        run: php vendor/bin/phan --target-php-version=${{ matrix.php-version }}
 
       - name: "Run PHPStan"
         run: php vendor/bin/phpstan
