--- a/composer.json
+++ b/composer.json
@@ -39,11 +39,12 @@
 		"ext-curl": "*",
 		"ext-json": "*",
 		"ext-sodium": "*",
+		"phan/phan": "^5.5.2",
 		"phpmd/phpmd": "^2.15",
-		"phpstan/phpstan": "^2.1.27",
+		"phpstan/phpstan": "^2.1.31",
 		"phpstan/phpstan-deprecation-rules": "^2.0.3",
 		"phpunit/phpunit": "^11.2",
-		"slevomat/coding-standard": "^8.23",
+		"slevomat/coding-standard": "^8.24",
 		"squizlabs/php_codesniffer": "^4.0"
 	},
 	"suggest": {
@@ -60,6 +61,7 @@
 		}
 	},
 	"scripts": {
+		"phan": "@php vendor/bin/phan",
 		"phpcs": "@php vendor/bin/phpcs",
 		"phpunit": "@php vendor/bin/phpunit",
 		"phpstan": "@php vendor/bin/phpstan",
