--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,9 @@
 		"ext-curl": "*",
 		"ext-json": "*",
 		"ext-sodium": "*",
+		"phan/phan": "^5.5.2",
 		"phpmd/phpmd": "^2.15",
-		"phpstan/phpstan": "^2.1.27",
+		"phpstan/phpstan": "^2.1.32",
 		"phpstan/phpstan-deprecation-rules": "^2.0.3",
 		"phpunit/phpunit": "^9.6",
 		"slevomat/coding-standard": "^8.23",
@@ -60,6 +61,7 @@
 		}
 	},
 	"scripts": {
+		"phan": "@php vendor/bin/phan",
 		"phpcs": "@php vendor/bin/phpcs",
 		"phpunit": "@php vendor/bin/phpunit",
 		"phpstan": "@php vendor/bin/phpstan",
